<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpPage"
    android:background="#fece2f">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/welcome_screen_buns" />

    <TextView
        android:id="@+id/txtWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/bangers"
        android:text="XIAOLONGBAO SEEKER"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txtHelpGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="XIAOLONGBAO SEEKER"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcomeTitle"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/txtHelpGameContent"
        android:layout_width="591dp"
        android:layout_height="88dp"
        android:text="You are a chef at a DimSum restaurant. One day you accidentally mixed up the empty containers with ones that are full of Xiaolongbaos!  You must find the containers with Xiaolongbaos because customers are waiting! Start the game by clicking Options to customize your gameboard and the number of buns. When you start the game, click the container lids to find out whether a Xiaolongbao is under it. If it doesn't, it will scan the row and column to tell you how many Xiaolongbaos are hidden in them. You can also click the Xiaolongbao to trigger the scan!"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <TextView
        android:id="@+id/txtHelpAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="Author"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003" />

    <TextView
        android:id="@+id/txtHelpAuthorContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/Course_Website"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="@+id/txtHelpGameContent"
        app:layout_constraintTop_toBottomOf="@+id/txtHelpGameContent"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/txtHelpResource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="Resources"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <LinearLayout
        android:layout_width="585dp"
        android:layout_height="133dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtHelpAuthorContent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="121dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtHelpResourceContent8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_music"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtHelpResourceContent4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buns"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtHelpResourceContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_animation"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtHelpResourceContent7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_start_music"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtHelpResourceContent6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_music"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtHelpResourceContent3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_container"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtHelpResourceContent5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cap_image"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtHelpResourceContent2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buns_image"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtHelpPageMusic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_music"
                    android:textSize="12sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>